# crack-detection

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh
CrackDetection/CrackDetection/: CMakeLists.txt  algo_t.hpp  clusters.cpp  evaluation.cpp  gaussianBlurTest.cpp  inverse.cpp  main.cpp  optimization.cpp  plotScores.m  prcurve.hpp  sobel.cpp  tools.cpp  tools.hpp
architecture/: CMakeLists.txt
architecture/CrackDetection/: CMakeLists.txt  darkness_algo_t.cpp  darkness_algo_t.hpp  linear_threshold.cpp  score_t.hpp  scoring.cpp  scoring.hpp  tools.hpp
headers/: arg.hpp  arguments.hpp  dichotomy.hpp  filters.hpp  prcurve.hpp  scoring.hpp
src/: arg.cpp  arguments.cpp  clusters.cpp  dichotomy.cpp  evaluation.cpp  filters.cpp  gradient_direction.cpp  laplacien.cpp  low_freq_substraction.cpp  optimization.cpp  precision.cpp  processing.cpp  recall.cpp  scoring.cpp  seuilGris.cpp  sobel.cpp  sobel_clusters.cpp  test.cpp
